[gd_scene load_steps=4 format=2]

[ext_resource path="res://LevelMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/DejaVuSans-Bold-70.res" type="DynamicFont" id=2]
[ext_resource path="res://LevelButton.tscn" type="PackedScene" id=3]

[node name="ChooseLevelScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
custom_constants/separation = 60
script = ExtResource( 1 )

[node name="ChooseLevelLabel" type="Label" parent="Menu"]
margin_left = 224.0
margin_right = 816.0
margin_bottom = 82.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "Choose Level"
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
margin_top = 142.0
margin_right = 1040.0
margin_bottom = 262.0
custom_constants/separation = 60

[node name="LevelButton" parent="Menu/HBoxContainer" instance=ExtResource( 3 )]

[node name="LevelButton2" parent="Menu/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 180.0
margin_right = 300.0

[node name="LevelButton3" parent="Menu/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 360.0
margin_right = 480.0

[node name="LevelButton4" parent="Menu/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 540.0
margin_right = 660.0

[node name="LevelButton5" parent="Menu/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 720.0
margin_right = 840.0

[node name="LevelButton6" parent="Menu/HBoxContainer" instance=ExtResource( 3 )]
margin_left = 900.0
margin_right = 1020.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Menu"]
margin_top = 322.0
margin_right = 1040.0
margin_bottom = 442.0
custom_constants/separation = 60

[node name="LevelButton" parent="Menu/HBoxContainer2" instance=ExtResource( 3 )]

[node name="LevelButton2" parent="Menu/HBoxContainer2" instance=ExtResource( 3 )]
margin_left = 180.0
margin_right = 300.0

[node name="LevelButton3" parent="Menu/HBoxContainer2" instance=ExtResource( 3 )]
margin_left = 360.0
margin_right = 480.0

[node name="LevelButton4" parent="Menu/HBoxContainer2" instance=ExtResource( 3 )]
margin_left = 540.0
margin_right = 660.0

[node name="LevelButton5" parent="Menu/HBoxContainer2" instance=ExtResource( 3 )]
margin_left = 720.0
margin_right = 840.0

[node name="LevelButton6" parent="Menu/HBoxContainer2" instance=ExtResource( 3 )]
margin_left = 900.0
margin_right = 1020.0

[node name="BackButton" type="Button" parent="Menu"]
margin_top = 502.0
margin_right = 220.0
margin_bottom = 590.0
rect_min_size = Vector2( 220, 88 )
size_flags_horizontal = 0
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
flat = true

[node name="BackButtonLabel" type="Label" parent="Menu/BackButton"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 2 )
text = "Back"
uppercase = true
[connection signal="pressed" from="Menu/BackButton" to="Menu" method="_on_BackButton_pressed"]
